# cpp-assertions

./: .clangd  .gitignore  Assert.hpp  Assert_test.cpp  CMakeLists.txt  Makefile  README.md  compile_flags.txt  run_tests.sh
src/: Assert.hpp  CMakeLists.txt
tests/: Assert_test.cpp  CMakeLists.txt
